--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,7 +8,8 @@
 	<body>
 		Before
 		<br />
-		<%- body %>
+		<%- include('../partials/header.ejs')%> <%-
+		include('../partials/errorMessage.ejs')%> <%- body %>
 		<br />
 		After
 		<br />
