--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,22 +1,20 @@
 <div>
-<label>Title</label>
-<input type="text" name="title" value="<%=book.name%>" />
-</div>
-<div>
-<label>Author</label>
-
-<select name="author">
-	<% authors.forEach(author => { %> <% if (author.id === book.author) { %>
-	<option selected label="<%= author.name %>" value="<%= author.id %>">
-		<% } else { %>
-	</option>
-
-	<option label="<%= author.name %>" value="<%= author.id %>">
-		<% } %> <% }) %>
-	</option>
-</select>
-</div>
-<div>
+	<label>Title</label>
+	<input type="text" name="title" value="<%= book.title %>">
+ </div>
+ <div>
+	<label>Author</label>
+	<select name="author">
+	<% authors.forEach(author => { %>
+	  <% if (author.id === book.author) { %>
+		 <option selected label="<%= author.name %>" value="<%= author.id %>">
+	  <% } else { %>
+		 <option label="<%= author.name %>" value="<%= author.id %>">
+	  <% } %>
+	<% }) %>
+	</select>
+ </div>
+ <div>
 	<label>Publish Date</label>
 	<input type="date" name="publishDate"
 			value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
