--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,6 @@
-<div class="media">
-	<a class="d-flex align-self-center" href="#">
-		<img src="" alt="" />
-	</a>
-	<div class="media-body">
-		<p>Middle</p>
-	</div>
+<h2>Recently Added</h2>
+<div>
+	<% books.forEach(book => { %>
+	<img height="150" width="100" src="<%= book.coverImagePath %>" />
+	<% }) %>
 </div>
